i seem to never have committed this.
git-svn-id: https://svn.fsinf.at/mati/proj/pub/munojabo@585 5e855dc9-1e6c-4aa0-987e-21f7185f60fc

--- a/munojabo.conf.example
+++ b/munojabo.conf.example
@@ -1,5 +1,15 @@
-[munojabo]
+;[general]
+;debug = True
+
+[xmpp]
 user: 
 server: 
-resource:
-password:
+resource: 
+pass: 
+
+[mysql]
+db: 
+user: 
+pass: 
+; Default is localhost:
+;host:
